--- a/ui/src/app/features/model-clone-dialog/model-clone-dialog.component.scss
+++ b/ui/src/app/features/model-clone-dialog/model-clone-dialog.component.scss
@@ -1,4 +1,4 @@
-/*!
+/*
  * Copyright (c) 2020 the original author or authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -10,6 +10,47 @@
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing
+ * or implied. See the License for the specific language go verning
  * permissions and limitations under the License.
  */
+
+@import 'forms.scss';
+@import 'mixins.scss';
+@import 'colors.scss';
+
+.form-field {
+  @include form-field($light-gray, $lighter-gray);
+}
+
+.dialog {
+  &__header {
+    width: 100%;
+    &--title {
+      margin: 1rem 0 0;
+      font-size: 30px;
+      font-weight: 600;
+      color: $dark-blue;
+    }
+  }
+
+  &__content {
+    box-sizing: border-box;
+    overflow: hidden;
+    font-size: 23px;
+    color: $secondary;
+    margin-bottom: 40px;
+  }
+
+  &__actions {
+    display: flex;
+    justify-content: space-between;
+
+    .cancel-btn {
+      @include action-btns(149px, $light-blue, $white);
+      border: 2px solid $light-blue;
+    }
+    .clone-btn {
+      @include action-btns(149px, $white, $light-blue);
+    }
+  }
+}
