--- a/ui/src/styles/colors.scss
+++ b/ui/src/styles/colors.scss
@@ -42,6 +42,7 @@ $lighter-blue: #eef1f5;
 $dark-blue: #04234d; // labels
 $md-blue: #414b59;
 $pale-blue: #8c97a7;
+$breadcrumbs-blue: #748295;
 $secondary: #39404a;
 $orange: #ff8a00; // labels
 $purple: #8f38d3; // labels
